--- a/index_en.html
+++ b/index_en.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The 15 Greatest Scientists of the Modern Era</title>
+<title>The 17 Greatest Scientists of the Modern Era</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -444,6 +444,42 @@ const scientists = [
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
   },
   {
+    name: "James Watt",
+    years: "1736\u20131819",
+    field: "Engineering & Physics",
+    bio: "Scottish inventor and engineer whose improvement of the steam engine powered the Industrial Revolution.",
+    achievements: [
+      "Invention of the separate condenser (1769) — tripled the efficiency of the steam engine",
+      "Partnership with Matthew Boulton: mass production of improved steam engines from 1775",
+      "Introduced the unit of horsepower to compare engine performance",
+      "Developed the double-acting rotative steam engine for industrial applications",
+      "The SI unit of power (watt) was named in his honor",
+      "His engines powered factories, mines, and mills, ushering in the Industrial Age"
+    ],
+    influence: "His steam engine was the driving force of the Industrial Revolution.",
+    image: "portraits/20_James_Watt.jpg",
+    symbol: "🚂",
+    flag: "\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F"
+  },
+  {
+    name: "Carl Friedrich Gauss",
+    years: "1777\u20131855",
+    field: "Mathematics & Physics",
+    bio: "German mathematician, physicist and astronomer \u2014 the \u2018Prince of Mathematics\u2019.",
+    achievements: [
+      "Disquisitiones Arithmeticae (1801): foundational work of modern number theory",
+      "Developed the method of least squares for statistical data analysis",
+      "The Gaussian normal distribution (bell curve) \u2014 foundation of modern statistics",
+      "Pioneering contributions to non-Euclidean geometry, which he explored decades before others",
+      "Together with Weber: first electromagnetic telegraph system (1833)",
+      "The unit of magnetic flux density (gauss) bears his name"
+    ],
+    influence: "Shaped nearly every field of mathematics and mathematical physics.",
+    image: "portraits/19_Carl_Friedrich_Gauss.jpg",
+    symbol: "\uD83D\uDCD0",
+    flag: "\uD83C\uDDE9\uD83C\uDDEA"
+  },
+  {
     name: "Charles Darwin",
     years: "1809\u20131882",
     field: "Biology & Natural History",
@@ -693,7 +729,7 @@ const gridCards = scientists.map((s, i) => {
   </div>`;
 }).join('');
 titleSlide.innerHTML = `
-  <h1>The 15 Greatest Scientists<br>of the Modern Era</h1>
+  <h1>The 17 Greatest Scientists<br>of the Modern Era</h1>
   <p>A Journey Through the History of Science</p>
   <div class="title-grid">${gridCards}</div>
 `;
@@ -735,7 +771,7 @@ scientists.forEach((s, i) => {
   slide.innerHTML = `
     ${imageHTML}
     <div class="slide-content">
-      <div class="slide-number">Scientist ${i + 1} of 15</div>
+      <div class="slide-number">Scientist ${i + 1} of 17</div>
       <h2>${s.name}</h2>
       <div class="field">${s.field}</div>
       <div class="dates">${s.years}</div>
