Add Robert F. Furchgott to scientists list with achievements and biography
- Included Robert F. Furchgott (1916–2009) in the scientists array.
- Added detailed biography highlighting his discovery of nitric oxide as a signaling molecule.
- Listed significant achievements including the Nobel Prize in Physiology or Medicine (1998) and contributions to the development of Viagra.
- Added corresponding images and logos for visual representation.

--- a/index.html
+++ b/index.html
@@ -697,6 +697,23 @@ const scientists = [
     symbol: "",
     logo: "portraits/Lucas-Higgs-CE0047H-nice2.jpg",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
+  },
+  {
+    name: "Robert F. Furchgott",
+    years: "1916–2009",
+    field: "Pharmakologie",
+    bio: "Amerikanischer Pharmakologe, dessen bahnbrechende Entdeckung von Stickstoffmonoxid (NO) als Signalmolekül im Herz-Kreislauf-System die Grundlage für die Entwicklung von Viagra legte. 1980 identifizierte er den 'endothelialen Relaxationsfaktor' (EDRF), der sich später als Stickstoffmonoxid herausstellte. Diese Erkenntnis revolutionierte das Verständnis der Blutgefäßregulation und führte direkt zur Entwicklung von Sildenafil (Viagra) durch Pfizer.",
+    achievements: [
+      "Entdeckung des endothelialen Relaxationsfaktors (EDRF) — Stickstoffmonoxid als Signalmolekül (1980)",
+      "Nobelpreis für Physiologie oder Medizin 1998 (gemeinsam mit Louis Ignarro und Ferid Murad)",
+      "Seine Forschung ermöglichte die Entwicklung von Viagra (Sildenafil), zugelassen 1998",
+      "Revolutionierte das Verständnis der Blutgefäßerweiterung und Herz-Kreislauf-Pharmakologie"
+    ],
+    influence: "Seine Entdeckung von Stickstoffmonoxid als Signalmolekül legte den Grundstein für Viagra und die moderne Herz-Kreislauf-Medizin.",
+    image: "portraits/21_Robert_Furchgott.jpg",
+    symbol: "",
+    logo: "portraits/viagra_logo.jpg",
+    flag: "🇺🇸"
   }
 ];
 
