--- a/index_en.html
+++ b/index_en.html
@@ -697,6 +697,23 @@ const scientists = [
     symbol: "",
     logo: "portraits/Lucas-Higgs-CE0047H-nice2.jpg",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
+  },
+  {
+    name: "Robert F. Furchgott",
+    years: "1916–2009",
+    field: "Pharmacology",
+    bio: "American pharmacologist whose groundbreaking discovery of nitric oxide (NO) as a signaling molecule in the cardiovascular system laid the foundation for the development of Viagra. In 1980, he identified the 'endothelium-derived relaxing factor' (EDRF), later shown to be nitric oxide. This discovery revolutionized the understanding of blood vessel regulation and led directly to the development of sildenafil (Viagra) by Pfizer.",
+    achievements: [
+      "Discovery of endothelium-derived relaxing factor (EDRF) — nitric oxide as a signaling molecule (1980)",
+      "Nobel Prize in Physiology or Medicine 1998 (shared with Louis Ignarro and Ferid Murad)",
+      "His research enabled the development of Viagra (sildenafil), approved in 1998",
+      "Revolutionized the understanding of vasodilation and cardiovascular pharmacology"
+    ],
+    influence: "His discovery of nitric oxide as a signaling molecule laid the groundwork for Viagra and modern cardiovascular medicine.",
+    image: "portraits/21_Robert_Furchgott.jpg",
+    symbol: "",
+    logo: "portraits/viagra_logo.jpg",
+    flag: "🇺🇸"
   }
 ];
 
