--- a/index_it.html
+++ b/index_it.html
@@ -697,6 +697,23 @@ const scientists = [
     symbol: "",
     logo: "portraits/Lucas-Higgs-CE0047H-nice2.jpg",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
+  },
+  {
+    name: "Robert F. Furchgott",
+    years: "1916–2009",
+    field: "Farmacologia",
+    bio: "Farmacologo americano la cui rivoluzionaria scoperta dell'ossido nitrico (NO) come molecola di segnalazione nel sistema cardiovascolare gettò le basi per lo sviluppo del Viagra. Nel 1980 identificò il 'fattore rilassante derivato dall'endotelio' (EDRF), che si rivelò essere l'ossido nitrico. Questa scoperta rivoluzionò la comprensione della regolazione dei vasi sanguigni e portò direttamente allo sviluppo del sildenafil (Viagra) da parte di Pfizer.",
+    achievements: [
+      "Scoperta del fattore rilassante derivato dall'endotelio (EDRF) — ossido nitrico come molecola di segnalazione (1980)",
+      "Premio Nobel per la Fisiologia o la Medicina 1998 (condiviso con Louis Ignarro e Ferid Murad)",
+      "La sua ricerca rese possibile lo sviluppo del Viagra (sildenafil), approvato nel 1998",
+      "Rivoluzionò la comprensione della vasodilatazione e della farmacologia cardiovascolare"
+    ],
+    influence: "La sua scoperta dell'ossido nitrico come molecola di segnalazione gettò le basi per il Viagra e la moderna medicina cardiovascolare.",
+    image: "portraits/21_Robert_Furchgott.jpg",
+    symbol: "",
+    logo: "portraits/viagra_logo.jpg",
+    flag: "🇺🇸"
   }
 ];
 
