--- a/index.html
+++ b/index.html
@@ -372,6 +372,189 @@
     color: #444;
     z-index: 100;
   }
+
+  /* Mobile responsive */
+  @media (max-width: 768px) {
+    body {
+      overflow-y: auto;
+      height: auto;
+    }
+
+    .slideshow {
+      height: 100vh;
+      height: 100dvh;
+      perspective: none;
+    }
+
+    .carousel-track {
+      transform-style: flat !important;
+      transform: none !important;
+    }
+
+    .slide {
+      display: none;
+      flex-direction: column;
+      position: relative;
+      inset: auto;
+      min-height: 100vh;
+      min-height: 100dvh;
+      height: auto;
+    }
+
+    .slide.active {
+      display: flex;
+    }
+
+    .slide-title {
+      padding: 1.5rem 1rem;
+      min-height: 100vh;
+      min-height: 100dvh;
+      justify-content: flex-start;
+      padding-top: 2.5rem;
+    }
+
+    .slide-title h1 {
+      font-size: 1.5rem;
+      margin-bottom: 0.3em;
+    }
+
+    .slide-title p {
+      font-size: 0.9rem;
+    }
+
+    .title-grid {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 0.8rem;
+      padding: 0 0.5rem;
+      margin-top: 1rem;
+    }
+
+    .title-card-img {
+      width: 60px;
+      height: 60px;
+    }
+
+    .title-card-name {
+      font-size: 0.6rem;
+    }
+
+    .title-card-symbol {
+      font-size: 1rem;
+    }
+
+    .slide-scientist {
+      flex-direction: column;
+    }
+
+    .slide-image,
+    .slide-image-duo {
+      width: 100%;
+      height: 35vh;
+      height: 35dvh;
+      flex-shrink: 0;
+    }
+
+    .slide-image::after,
+    .slide-image-duo .duo-half::after {
+      background: linear-gradient(to bottom, transparent 60%, #0a0a1a);
+    }
+
+    .slide-content {
+      width: 100%;
+      padding: 1.5rem 1.2rem 5rem 1.2rem;
+      min-height: 0;
+      overflow-y: auto;
+    }
+
+    .slide-content h2 {
+      font-size: 1.6rem;
+    }
+
+    .slide-content .field {
+      font-size: 0.95rem;
+      margin-bottom: 0.8em;
+    }
+
+    .slide-content .dates {
+      font-size: 0.85rem;
+      margin-bottom: 1em;
+      padding-bottom: 0.8em;
+    }
+
+    .slide-content .bio {
+      font-size: 0.9rem;
+      line-height: 1.6;
+      margin-bottom: 1em;
+    }
+
+    .achievements li {
+      font-size: 0.85rem;
+      line-height: 1.4;
+      padding: 0.3em 0;
+    }
+
+    .influence {
+      font-size: 0.85rem;
+    }
+
+    .flag {
+      font-size: 2rem;
+      top: 0.8rem;
+      left: 0.8rem;
+    }
+
+    .symbol {
+      font-size: 5rem;
+      top: 0.5rem;
+      right: 0.5rem;
+    }
+
+    .transistor-svg {
+      width: 5rem;
+      height: 6rem;
+      top: 0.5rem;
+      right: 0.5rem;
+    }
+
+    .logo {
+      width: 80px;
+      height: 80px;
+      max-width: 80px;
+      max-height: 80px;
+      top: 0.5rem;
+      right: 0.5rem;
+    }
+
+    .nav {
+      bottom: 0.8rem;
+      gap: 0.5rem;
+    }
+
+    .nav button {
+      width: 36px;
+      height: 36px;
+      font-size: 1rem;
+    }
+
+    .dot {
+      width: 7px;
+      height: 7px;
+    }
+
+    .counter {
+      top: 0.8rem;
+      right: 0.8rem;
+      font-size: 0.75rem;
+    }
+
+    .hint {
+      display: none;
+    }
+
+    .slide-number {
+      font-size: 0.75rem;
+    }
+  }
 </style>
 </head>
 <body>
@@ -803,11 +986,14 @@ scientists.forEach((s, i) => {
 });
 
 // Position slides on 3D carousel
+const isMobile = window.matchMedia('(max-width: 768px)').matches;
 const slides = track.querySelectorAll('.slide');
-slides.forEach((slide, i) => {
-  slide.style.transform = `rotateY(${i * anglePerSlide}deg) translateZ(${radius}px)`;
-});
-track.style.transform = `translateZ(${-radius}px) rotateY(0deg)`;
+if (!isMobile) {
+  slides.forEach((slide, i) => {
+    slide.style.transform = `rotateY(${i * anglePerSlide}deg) translateZ(${radius}px)`;
+  });
+  track.style.transform = `translateZ(${-radius}px) rotateY(0deg)`;
+}
 
 // Dots
 for (let i = 0; i < totalSlides; i++) {
@@ -829,7 +1015,9 @@ function goTo(index) {
   current = (index + totalSlides) % totalSlides;
   allSlides[current].classList.add('active');
   dots[current].classList.add('active');
-  track.style.transform = `translateZ(${-radius}px) rotateY(${-current * anglePerSlide}deg)`;
+  if (!isMobile) {
+    track.style.transform = `translateZ(${-radius}px) rotateY(${-current * anglePerSlide}deg)`;
+  }
   updateCounter();
 }
 
@@ -841,6 +1029,19 @@ document.addEventListener('keydown', (e) => {
   if (e.key === 'ArrowLeft') { e.preventDefault(); goTo(current - 1); }
   if (e.key === 'Home') { e.preventDefault(); goTo(0); }
   if (e.key === 'End') { e.preventDefault(); goTo(totalSlides - 1); }
+});
+
+// Touch/swipe support for mobile
+let touchStartX = 0;
+let touchEndX = 0;
+document.addEventListener('touchstart', (e) => { touchStartX = e.changedTouches[0].screenX; }, {passive: true});
+document.addEventListener('touchend', (e) => {
+  touchEndX = e.changedTouches[0].screenX;
+  const diff = touchStartX - touchEndX;
+  if (Math.abs(diff) > 50) {
+    if (diff > 0) goTo(current + 1);
+    else goTo(current - 1);
+  }
 });
 
 updateCounter();
